fixed broken css

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -27,8 +27,8 @@ body {
 	width: 60px;
 	border-radius: 25px 25px 25px 25px;
 	border: 2px solid black;
-	background-color: lightgray;
 	text-align: center;
+	background-color: #2c475e;
 }
 
 button:focus {outline:0 !important;}
@@ -166,19 +166,19 @@ li {
 	border-radius: 18px;
 	cursor: pointer;
 	-webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    border: 2px solid;
-    border-color: #40698c;
+	    transition-duration: 0.3s;
+	    border: 2px solid;
+	    border-color: #40698c;
 }
 
-/* when mouse is above the button */
+/* when mouse is above join button */
 #joinButton:hover {
-    background-color: #40698c;
+  	background-color: #40698c;
     color: #FFFFFF;
     border-color: #40698c;
 }
 
-/* when user has inputted 4 characters for the boxes */
+/* when user has inputted all 4 characters for the boxes */
 #joinButton:focus {
 	outline: none;
 	background-color: #40698c;
@@ -188,16 +188,14 @@ li {
 
 /* search results scrolling 
 #searchRes {
-	 overflow-y: scroll;
+overflow-y: scroll;
 }
 */
-
 /*search bar fanciness*/
 .searchbar input {
 	outline: none;
 	margin: 9px;
 }
-
 /* search box */
 .searchbar input[type=search] {
 	-webkit-appearance: textfield;
@@ -300,7 +298,7 @@ li {
 
 }
 
-/* only for queue page: song length */;
+/* only for queue page: song length */
 .tracks .track__length {
   margin-left: auto;
   
@@ -316,14 +314,14 @@ li {
 
 }
 
-/* only for queue page: track status changes */;
+/* only for queue page: track status changes */
 .tracks .track__status {
  /*margin-left: auto;*/
  margin-right: 2%;
  color: #aaaaaa;
 }
 
-/* only for search page: style for request button */;
+/* only for search page: style for request button */
 .tracks .track__reqbutton {
  /*margin-left: auto;*/
  margin-right: 2%;
